@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "0.5.1"
+  VERSION = "0.5.2"
 end
